--- a/src/index.css
+++ b/src/index.css
@@ -12,41 +12,116 @@ code {
     monospace;
 }
 
-.form-control{
-color:black!important
-
+.form-control {
+  color: black !important;
 }
 
 .modal-dialog {
- 
-          width: 360px;
-          height: 600;
-        }
- 
-.modal-header {
- 
-    background-color: rgba(219, 222, 226, 0);
-    
-    padding:16px 16px;
- 
-    color:rgb(25, 23, 23);
- 
-    border-bottom:2px dashed #337AB7;
- 
- }
+  width: 360px;
+  height: 600;
+}
 
- .gris{
-   background-color: rgba(163, 163, 224, 0.067);
- }
- /* html,
+.modal-header {
+  background-color: rgba(219, 222, 226, 0);
+
+  padding: 16px 16px;
+
+  color: rgb(25, 23, 23);
+
+  border-bottom: 2px dashed #337ab7;
+}
+
+.gris {
+  background-color: rgba(163, 163, 224, 0.067);
+}
+/* html,
         body {
             height: 100%;
             margin: 0;
             padding: 0;
         } */
 
-        .fronto {
-          background-color: rgba(10, 110, 241, 0.959);
-          position: fixed;
-          
-        }
+.fronto {
+  background-color: rgba(10, 110, 241, 0.959);
+  position: fixed;
+}
+
+.stars-outer {
+  display: inline-block;
+  position: relative;
+  font-family: FontAwesome;
+}
+
+.stars-outer::before {
+  content: "\f006 \f006 \f006 \f006 \f006";
+}
+
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+}
+
+.stars-inner::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  color: #f8ce0b;
+}
+
+.attribution {
+  font-size: 12px;
+  color: #444;
+  text-decoration: none;
+  text-align: center;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  z-index: -1;
+}
+.attribution:hover {
+  color: #1fa67a;
+}
+
+.sidenav {  
+  height: 95vh;
+  width: 0%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(255, 255, 255);
+  overflow-x: hidden;
+  transition: width .2s ease-in-out;
+  padding-top: 60px;
+}
+
+.sidenav > div{
+  transition:   2.5s;
+  border: 1px solid rgba(0, 0, 0, 0.287);  
+  opacity: 0 ;
+  transition: visibility 0s, opacity 1s ease-in-out
+}
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;  
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+
+
+
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+
