--- a/src/index.css
+++ b/src/index.css
@@ -16,20 +16,7 @@ code {
   color: black !important;
 }
 
-.modal-dialog {
-  width: 360px;
-  height: 600;
-}
 
-.modal-header {
-  background-color: rgba(219, 222, 226, 0);
-
-  padding: 16px 16px;
-
-  color: rgb(25, 23, 23);
-
-  border-bottom: 2px dashed #337ab7;
-}
 
 .gris {
   background-color: rgba(163, 163, 224, 0.067);
@@ -114,6 +101,49 @@ code {
 
 .sidenav a:hover {
   color: #f1f1f1;
+}
+
+/* ---------------------------------------------modal----------------------------- */
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 999999; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow-y: hidden;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.container-modal {
+  overflow-y: scroll;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 90vw;
+  height: 80vh;
+  
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 
