--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,8 @@ code {
 }
 
 .sidenav {  
-  /* display: hidden; */
-  height: 95vh;
+  max-height: 100vh;
+  height: 100vh;
   width: 0%;
   position: fixed;
   z-index: 1;
@@ -83,6 +83,7 @@ code {
   overflow-x: hidden;
   transition: width .2s ease-in-out;
   padding-top: 60px;
+  overflow-y: auto;
 }
 
 .sidenav > div{
@@ -106,35 +107,39 @@ code {
 /* ---------------------------------------------modal----------------------------- */
 
 .modal {
-  display: none; /* Hidden by default */
+  display: block; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 999999; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  z-index: 999999; /* Sit on top */  
   left: 0;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow-y: hidden;
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.788); /* Black w/ opacity */
 }
 
 /* Modal Content */
 .container-modal {
+  
   overflow-y: scroll;
   background-color: #fefefe;
   margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
+  /* padding: 20px; */
+  /* border: 1px solid #888; */
   width: 90vw;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
   height: 80vh;
-  
+  background-color: transparent;
 }
 
 /* The Close Button */
-.close {
+.container-modal > span {
+  position: absolute;
   color: #aaaaaa;
-  float: right;
+  right: 10px;
+  top: 10px;
   font-size: 28px;
   font-weight: bold;
 }
