--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root{
+  --height-header: 11vmin;
+  --height-footer: 11vmin;
+  --color-primario: #2C3E50;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -16,22 +22,16 @@ code {
   color: black !important;
 }
 
-
-
-.gris {
-  background-color: rgba(163, 163, 224, 0.067);
+.contenedor{
+  display:block;
+  width:100%;
+  padding-right:15px;
+  padding-left:15px;
+  margin-right:auto;
+  margin-left:auto;
+  box-sizing: border-box;
 }
-/* html,
-        body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        } */
 
-.fronto {
-  background-color: rgba(10, 110, 241, 0.959);
-  position: fixed;
-}
 
 .stars-outer {
   display: inline-block;
@@ -71,85 +71,13 @@ code {
   color: #1fa67a;
 }
 
-.sidenav {  
-  max-height: 100vh;
-  height: 100vh;
-  width: 0%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: rgb(255, 255, 255);
-  overflow-x: hidden;
-  transition: width .2s ease-in-out;
-  padding-top: 60px;
-  overflow-y: auto;
-}
 
-.sidenav > div{
-  transition:   2.5s;
-  border: 1px solid rgba(0, 0, 0, 0.287);  
-  opacity: 1 ;
-  transition: visibility 0s, opacity 1s ease-in-out
-}
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;  
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
 
 /* ---------------------------------------------modal----------------------------- */
 
-.modal {
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 999999; /* Sit on top */  
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow-y: hidden;
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.788); /* Black w/ opacity */
-}
 
-/* Modal Content */
-.container-modal {
-  
-  overflow-y: scroll;
-  background-color: #fefefe;
-  margin: auto;
-  /* padding: 20px; */
-  /* border: 1px solid #888; */
-  width: 90vw;
-  margin-top: 10vh;
-  margin-bottom: 10vh;
-  height: 80vh;
-  background-color: transparent;
-}
 
-/* The Close Button */
-.container-modal > span {
-  position: absolute;
-  color: #aaaaaa;
-  right: 10px;
-  top: 10px;
-  font-size: 28px;
-  font-weight: bold;
-}
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
 
 
 
